--- a/custom.css
+++ b/custom.css
@@ -14,7 +14,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 550px;
+    height: 750px;
     width: 500px;
     background-color: white;
     z-index: -1;
@@ -25,7 +25,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 450px;
+    height: 650px;
     width: 600px;
     background-color: #313e50;
     box-shadow: 0 20px 65px 7px rgba(0, 0, 0, 0.2);
@@ -61,5 +61,6 @@ button{
     outline: none;
     border: none;
     font-family: 'Roboto', sans-serif;
+    cursor: pointer;
 
 }
